--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
+    "rewind-start": "react-app-rewired start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,6 +42,9 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5",
-    "@types/styled-components": "^5.1.0"
+    "@types/styled-components": "^5.1.0",
+    "customize-cra": "^0.9.1",
+    "customize-cra-react-refresh": "^1.0.1",
+    "react-app-rewired": "^2.1.6"
   }
 }
